--- a/mid_project-checkpoint.ipynb
+++ b/mid_project-checkpoint.ipynb
@@ -26,9 +26,9 @@
     "<h3>\n",
     "    so now question is :<br></h3>\n",
     "    \n",
-    "   <h3> 1- which month  that movies realesed in has high popularity ,profit and vote average?<br></h3>\n",
+    "   <h3> 1- which month  that movies released in has high popularity ,profit and vote average?<br></h3>\n",
     "    \n",
-    "   <h3> 2-which day that movies realesed in has high popularity ,profit and vote average?<br></h3>\n",
+    "   <h3> 2-which day that movies released in has high popularity ,profit and vote average?<br></h3>\n",
     "\n",
     "   <h3> 3-how runtime can effect in popularity of movies and profit in last 10 years from 2005 to 2015?</h3>\n",
     "\n",
@@ -3859,7 +3859,7 @@
     "    \n",
     "Month:-<br>\n",
     "1-Movies that realesed in june has high popularity than movies realesed in other months<br>\n",
-    "2-December is the second lucky month,As movies realeased through get good popularity <br>\n",
+    "2-December is the second lucky month,As movies released through get good popularity <br>\n",
     "\"\"\"<br>\n",
     "3-December  has  high vote_average , Also other months has close vote average to December<br>\n",
     "\"\"\"<br>\n",
